// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./bui...) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./build/index.js","./a":"./build/a.js"}}',
    '/src/index.ts': '',
    '/src/a.ts': 'export const _ = 0'
  },
  entrypoints: [ '.' ]
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './src/index.ts',
        description: '',
        exports: []
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./bui...) 2`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./build/index.js"}}',
    '/src/index.ts': '/** EX _ doc */ export const _ = () => 0'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './src/index.ts',
        description: 'EX _ doc',
        exports: [
          {
            name: '_',
            signature: {
              overloads: [
                {
                  typeParameters: [],
                  parameters: [],
                  returnType: 'number',
                  returnDoc: undefined,
                  throws: []
                }
              ],
              _tag: 'FunctionSignatureModel'
            },
            description: 'EX _ doc',
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './src/index.ts',
              line: 1
            },
            _tag: 'value',
            type: 'function'
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./bui...) 3`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./build/index.js","./a":"./build/a.js"}}',
    '/src/index.ts': '/** P doc */ export * as A from \\'./a.js\\'',
    '/src/a.ts': '/** NS doc */ /** _ doc **/ export const _ = 0'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './src/a.ts',
        description: 'P doc',
        exports: [
          {
            name: '_',
            signature: {
              type: '0',
              _tag: 'ValueSignatureModel'
            },
            description: 'NS doc',
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './src/a.ts',
              line: 1
            },
            _tag: 'value',
            type: 'const'
          }
        ]
      },
      _tag: 'DrillableNamespaceEntrypoint'
    },
    {
      path: './a',
      module: {
        location: './src/a.ts',
        description: 'NS doc',
        exports: [
          {
            name: '_',
            signature: {
              type: '0',
              _tag: 'ValueSignatureModel'
            },
            description: 'NS doc',
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './src/a.ts',
              line: 1
            },
            _tag: 'value',
            type: 'const'
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./bui...) 4`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./build/index.js"}}',
    '/src/index.ts': '/** a */\\nexport const a = () => 1\\n\\n/** b @internal */\\nexport const b = () => 2'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './src/index.ts',
        description: 'a',
        exports: [
          {
            name: 'a',
            signature: {
              overloads: [
                {
                  typeParameters: [],
                  parameters: [],
                  returnType: 'number',
                  returnDoc: undefined,
                  throws: []
                }
              ],
              _tag: 'FunctionSignatureModel'
            },
            description: 'a',
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './src/index.ts',
              line: 2
            },
            _tag: 'value',
            type: 'function'
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./bui...) 5`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./build/index.js"}}',
    '/src/index.ts': '/** a */\\nexport const a = () => 1\\n\\n/** b */\\nexport const _b = () => 2'
  },
  filterUnderscoreExports: true
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './src/index.ts',
        description: 'a',
        exports: [
          {
            name: 'a',
            signature: {
              overloads: [
                {
                  typeParameters: [],
                  parameters: [],
                  returnType: 'number',
                  returnDoc: undefined,
                  throws: []
                }
              ],
              _tag: 'FunctionSignatureModel'
            },
            description: 'a',
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './src/index.ts',
              line: 2
            },
            _tag: 'value',
            type: 'function'
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./bui...) 6`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./build/index.js"}}',
    '/src/index.ts': '/** a */\\nexport const a = () => 1\\n\\n/** b */\\nexport const _b = () => 2'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './src/index.ts',
        description: 'a',
        exports: [
          {
            name: 'a',
            signature: {
              overloads: [
                {
                  typeParameters: [],
                  parameters: [],
                  returnType: 'number',
                  returnDoc: undefined,
                  throws: []
                }
              ],
              _tag: 'FunctionSignatureModel'
            },
            description: 'a',
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './src/index.ts',
              line: 2
            },
            _tag: 'value',
            type: 'function'
          },
          {
            name: '_b',
            signature: {
              overloads: [
                {
                  typeParameters: [],
                  parameters: [],
                  returnType: 'number',
                  returnDoc: undefined,
                  throws: []
                }
              ],
              _tag: 'FunctionSignatureModel'
            },
            description: 'b',
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './src/index.ts',
              line: 5
            },
            _tag: 'value',
            type: 'function'
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./bui...) 7`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./build/index.js"}}',
    '/src/index.ts': '/** a */\\nexport const a = () => 1\\n\\n/** b @internal */\\nexport const b = () => 2\\n\\n/** c */\\nexport const _c = () => 3\\n\\n/** d @internal */\\nexport const _d = () => 4'
  },
  filterUnderscoreExports: true
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './src/index.ts',
        description: 'a',
        exports: [
          {
            name: 'a',
            signature: {
              overloads: [
                {
                  typeParameters: [],
                  parameters: [],
                  returnType: 'number',
                  returnDoc: undefined,
                  throws: []
                }
              ],
              _tag: 'FunctionSignatureModel'
            },
            description: 'a',
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './src/index.ts',
              line: 2
            },
            _tag: 'value',
            type: 'function'
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./bui...) 8`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./build/index.js"}}',
    '/src/index.ts': '// @ts-expect-error Duplicate identifier\\nexport * as U from \\'./u.js\\'\\n/** Shadow @category C */\\nexport namespace U {}',
    '/src/u.ts': '/** Nested */\\n\\n/** a */\\nexport const a = () => 1'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './src/index.ts',
        description: '',
        exports: [
          {
            name: 'U',
            signature: {
              text: 'export * as U',
              _tag: 'TypeSignatureModel'
            },
            description: 'Shadow',
            examples: [],
            deprecated: undefined,
            category: 'C',
            tags: {},
            sourceLocation: {
              file: './src/index.ts',
              line: 2
            },
            _tag: 'value',
            type: 'namespace',
            module: {
              location: './src/u.ts',
              description: 'Nested',
              exports: [
                {
                  name: 'a',
                  signature: {
                    overloads: [
                      {
                        typeParameters: [],
                        parameters: [],
                        returnType: 'number',
                        returnDoc: undefined,
                        throws: []
                      }
                    ],
                    _tag: 'FunctionSignatureModel'
                  },
                  description: 'Nested',
                  examples: [],
                  deprecated: undefined,
                  category: undefined,
                  tags: {},
                  sourceLocation: {
                    file: './src/u.ts',
                    line: 4
                  },
                  _tag: 'value',
                  type: 'function'
                }
              ]
            }
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./bui...) 9`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./build/index.js"}}',
    '/src/index.ts': 'export * as U from \\'./u.js\\'',
    '/src/u.ts': '/** Nested */\\n\\n/** a */\\nexport const a = () => 1'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './src/index.ts',
        description: '',
        exports: [
          {
            name: 'U',
            signature: {
              text: 'export * as U',
              _tag: 'TypeSignatureModel'
            },
            description: 'Nested',
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './src/index.ts',
              line: 1
            },
            _tag: 'value',
            type: 'namespace',
            module: {
              location: './src/u.ts',
              description: 'Nested',
              exports: [
                {
                  name: 'a',
                  signature: {
                    overloads: [
                      {
                        typeParameters: [],
                        parameters: [],
                        returnType: 'number',
                        returnDoc: undefined,
                        throws: []
                      }
                    ],
                    _tag: 'FunctionSignatureModel'
                  },
                  description: 'Nested',
                  examples: [],
                  deprecated: undefined,
                  category: undefined,
                  tags: {},
                  sourceLocation: {
                    file: './src/u.ts',
                    line: 4
                  },
                  _tag: 'value',
                  type: 'function'
                }
              ]
            }
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./bui...) 10`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./build/index.js"}}',
    '/src/index.ts': '// @ts-expect-error Duplicate identifier\\nexport * as U from \\'./u.js\\'\\n/** Shadow @category C */\\nexport namespace U {}\\n\\n/** b */\\nexport const b = () => 1',
    '/src/u.ts': '/** Nested */\\n\\n/** a */\\nexport const a = () => 1'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './src/index.ts',
        description: '',
        exports: [
          {
            name: 'U',
            signature: {
              text: 'export * as U',
              _tag: 'TypeSignatureModel'
            },
            description: 'Shadow',
            examples: [],
            deprecated: undefined,
            category: 'C',
            tags: {},
            sourceLocation: {
              file: './src/index.ts',
              line: 2
            },
            _tag: 'value',
            type: 'namespace',
            module: {
              location: './src/u.ts',
              description: 'Nested',
              exports: [
                {
                  name: 'a',
                  signature: {
                    overloads: [
                      {
                        typeParameters: [],
                        parameters: [],
                        returnType: 'number',
                        returnDoc: undefined,
                        throws: []
                      }
                    ],
                    _tag: 'FunctionSignatureModel'
                  },
                  description: 'Nested',
                  examples: [],
                  deprecated: undefined,
                  category: undefined,
                  tags: {},
                  sourceLocation: {
                    file: './src/u.ts',
                    line: 4
                  },
                  _tag: 'value',
                  type: 'function'
                }
              ]
            }
          },
          {
            name: 'b',
            signature: {
              overloads: [
                {
                  typeParameters: [],
                  parameters: [],
                  returnType: 'number',
                  returnDoc: undefined,
                  throws: []
                }
              ],
              _tag: 'FunctionSignatureModel'
            },
            description: 'b',
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './src/index.ts',
              line: 7
            },
            _tag: 'value',
            type: 'function'
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./bui...) 11`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./build/index.js"}}',
    '/src/index.ts': '/** JSDoc */\\nexport const a = () => 1',
    '/src/index.md': 'M'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './src/index.ts',
        description: 'JSDoc',
        exports: [
          {
            name: 'a',
            signature: {
              overloads: [
                {
                  typeParameters: [],
                  parameters: [],
                  returnType: 'number',
                  returnDoc: undefined,
                  throws: []
                }
              ],
              _tag: 'FunctionSignatureModel'
            },
            description: 'JSDoc',
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './src/index.ts',
              line: 2
            },
            _tag: 'value',
            type: 'function'
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./bui...) 12`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./build/index.js"}}',
    '/src/index.ts': '/** JSDoc */\\nexport const a = () => 1',
    '/src/README.md': 'R'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './src/index.ts',
        description: 'JSDoc',
        exports: [
          {
            name: 'a',
            signature: {
              overloads: [
                {
                  typeParameters: [],
                  parameters: [],
                  returnType: 'number',
                  returnDoc: undefined,
                  throws: []
                }
              ],
              _tag: 'FunctionSignatureModel'
            },
            description: 'JSDoc',
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './src/index.ts',
              line: 2
            },
            _tag: 'value',
            type: 'function'
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./bui...) 13`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./build/index.js"}}',
    '/src/index.ts': 'export const a = () => 1',
    '/src/index.md': 'M',
    '/src/README.md': 'R'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './src/index.ts',
        description: '',
        exports: [
          {
            name: 'a',
            signature: {
              overloads: [
                {
                  typeParameters: [],
                  parameters: [],
                  returnType: 'number',
                  returnDoc: undefined,
                  throws: []
                }
              ],
              _tag: 'FunctionSignatureModel'
            },
            description: undefined,
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './src/index.ts',
              line: 1
            },
            _tag: 'value',
            type: 'function'
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./bui...) 14`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./build/index.js"}}',
    '/src/index.ts': 'export * as U from \\'./u.js\\'',
    '/src/index.md': 'W',
    '/src/u.ts': '/** N */\\nexport const a = () => 1'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './src/index.ts',
        description: '',
        exports: [
          {
            name: 'U',
            signature: {
              text: 'export * as U',
              _tag: 'TypeSignatureModel'
            },
            description: 'N',
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './src/index.ts',
              line: 1
            },
            _tag: 'value',
            type: 'namespace',
            module: {
              location: './src/u.ts',
              description: 'N',
              exports: [
                {
                  name: 'a',
                  signature: {
                    overloads: [
                      {
                        typeParameters: [],
                        parameters: [],
                        returnType: 'number',
                        returnDoc: undefined,
                        throws: []
                      }
                    ],
                    _tag: 'FunctionSignatureModel'
                  },
                  description: 'N',
                  examples: [],
                  deprecated: undefined,
                  category: undefined,
                  tags: {},
                  sourceLocation: {
                    file: './src/u.ts',
                    line: 2
                  },
                  _tag: 'value',
                  type: 'function'
                }
              ]
            }
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./bui...) 15`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./build/index.js"}}',
    '/src/index.ts': 'export * as U from \\'./u.js\\'\\n\\n/** b */\\nexport const b = () => 2',
    '/src/index.md': 'M',
    '/src/u.ts': '/** N */\\nexport const a = () => 1'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './src/index.ts',
        description: '',
        exports: [
          {
            name: 'U',
            signature: {
              text: 'export * as U',
              _tag: 'TypeSignatureModel'
            },
            description: 'N',
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './src/index.ts',
              line: 1
            },
            _tag: 'value',
            type: 'namespace',
            module: {
              location: './src/u.ts',
              description: 'N',
              exports: [
                {
                  name: 'a',
                  signature: {
                    overloads: [
                      {
                        typeParameters: [],
                        parameters: [],
                        returnType: 'number',
                        returnDoc: undefined,
                        throws: []
                      }
                    ],
                    _tag: 'FunctionSignatureModel'
                  },
                  description: 'N',
                  examples: [],
                  deprecated: undefined,
                  category: undefined,
                  tags: {},
                  sourceLocation: {
                    file: './src/u.ts',
                    line: 2
                  },
                  _tag: 'value',
                  type: 'function'
                }
              ]
            }
          },
          {
            name: 'b',
            signature: {
              overloads: [
                {
                  typeParameters: [],
                  parameters: [],
                  returnType: 'number',
                  returnDoc: undefined,
                  throws: []
                }
              ],
              _tag: 'FunctionSignatureModel'
            },
            description: 'b',
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './src/index.ts',
              line: 4
            },
            _tag: 'value',
            type: 'function'
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./bui...) 16`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./build/index.js"}}',
    '/src/index.ts': '// @ts-expect-error Duplicate identifier\\nexport * as U from \\'./u.js\\'\\n/** S @category C */\\nexport namespace U {}',
    '/src/index.md': 'M',
    '/src/u.ts': '/** N */\\nexport const a = () => 1'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './src/index.ts',
        description: '',
        exports: [
          {
            name: 'U',
            signature: {
              text: 'export * as U',
              _tag: 'TypeSignatureModel'
            },
            description: 'S',
            examples: [],
            deprecated: undefined,
            category: 'C',
            tags: {},
            sourceLocation: {
              file: './src/index.ts',
              line: 2
            },
            _tag: 'value',
            type: 'namespace',
            module: {
              location: './src/u.ts',
              description: 'N',
              exports: [
                {
                  name: 'a',
                  signature: {
                    overloads: [
                      {
                        typeParameters: [],
                        parameters: [],
                        returnType: 'number',
                        returnDoc: undefined,
                        throws: []
                      }
                    ],
                    _tag: 'FunctionSignatureModel'
                  },
                  description: 'N',
                  examples: [],
                  deprecated: undefined,
                  category: undefined,
                  tags: {},
                  sourceLocation: {
                    file: './src/u.ts',
                    line: 2
                  },
                  _tag: 'value',
                  type: 'function'
                }
              ]
            }
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./bui...) 17`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./build/index.js"}}',
    '/src/index.ts': '/**\\n * Input accepting various patterns:\\n * - Simple value: \\\\\`2\\\\\`\\n * - Simple object: \\\\\`{ foo: 1 }\\\\\`\\n * - Nested with arrow function: \\\\\`{ main: { start: (ctx) => 2 } }\\\\\`\\n * - Array: \\\\\`[1, 2, 3]\\\\\`\\n */\\nexport type PaddingInput = string'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './src/index.ts',
        description: 'Input accepting various patterns: - Simple value: 2 - Simple object:  foo: 1  - Nested with arrow function:  main:  start: (ctx) = 2   - Array: [1, 2, 3]',
        exports: [
          {
            name: 'PaddingInput',
            signature: {
              text: 'type PaddingInput = string',
              _tag: 'TypeSignatureModel'
            },
            description: 'Input accepting various patterns: - Simple value: 2 - Simple object:  foo: 1  - Nested with arrow function:  main:  start: (ctx) = 2   - Array: [1, 2, 3]',
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './src/index.ts',
              line: 8
            },
            _tag: 'type',
            type: 'type-alias'
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;
